test/cli/test-exceptions/exceptions-3/exception.yaml
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: pod-security-exception
  namespace: policy-exception-ns
spec:
  exceptions:
  - policyName: psa
    ruleNames:
    - baseline
  match:
    any:
    - resources:
        namespaces:
        - staging-ns
  podSecurity:
    - controlName: "HostPath Volumes"
      restrictedField: "spec.volumes[*].hostPath"
      values:
      - "/var/lib1"
