test/cli/test-exceptions/exceptions-3/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx
    args:
    - sleep
    - 1d
---
apiVersion: v1
kind: Pod
metadata:
  name: excluded-pod
  namespace: staging-ns
spec:
  volumes:
  - name: host
    hostPath:
      path: /var/lib1
  containers:
  - name: nginx
    image: nginx
    args:
    - sleep
    - 1d
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: default
spec:
  volumes:
  - name: host
    hostPath:
      path: /var/lib1
  containers:
  - name: nginx
    image: nginx
    args:
    - sleep
    - 1d
