test/cli/test-exceptions/exceptions-3/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
exceptions:
- exception.yaml
kind: Test
metadata:
  name: kyverno-test
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: psa
  resources:
  - bad-pod
  result: fail
  rule: baseline
- kind: Pod
  policy: psa
  resources:
  - good-pod
  result: pass
  rule: baseline
- kind: Pod
  policy: psa
  resources:
  - excluded-pod
  result: skip
  rule: baseline
